[gd_scene load_steps=9 format=2]

[ext_resource path="res://DeleteFile.gd" type="Script" id=1]
[ext_resource path="res://UI/Courneuf-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Menus/No.png" type="Texture" id=3]
[ext_resource path="res://UI/Menus/NoHovered.png" type="Texture" id=4]
[ext_resource path="res://Sonidos/Menu/Elegir_Menu.wav" type="AudioStream" id=5]
[ext_resource path="res://UI/Menus/YesHovered.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/Yes.png-2e0a208b7922ce67f0d2f1b80de55cda.stex"

[node name="DeleteFile" type="Node2D"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 188.0
margin_top = 149.0
margin_right = 838.0
margin_bottom = 474.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 650.0
margin_bottom = 325.0
color = Color( 0.94902, 0.937255, 0.862745, 0.960784 )
__meta__ = {
"_editor_description_": ""
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer"]
margin_right = 650.0
margin_bottom = 325.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "

[center]   Are you sure you want to delete this file?[/center]"
text = "

   Are you sure you want to delete this file?"
__meta__ = {
"_editor_description_": ""
}

[node name="Yes" type="TextureButton" parent="."]
margin_left = 350.0
margin_top = 370.0
margin_right = 382.0
margin_bottom = 402.0
rect_min_size = Vector2( 32, 32 )
rect_scale = Vector2( 2, 2 )
focus_neighbour_left = NodePath("../No")
focus_neighbour_right = NodePath("../No")
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = SubResource( 2 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="No" type="TextureButton" parent="."]
margin_left = 600.0
margin_top = 370.0
margin_right = 632.0
margin_bottom = 402.0
rect_min_size = Vector2( 32, 32 )
rect_scale = Vector2( 2, 2 )
focus_neighbour_left = NodePath("../Yes")
focus_neighbour_right = NodePath("../Yes")
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "Sonido"
[connection signal="focus_entered" from="Yes" to="." method="_on_Yes_focus_entered"]
[connection signal="mouse_entered" from="Yes" to="." method="_on_Yes_mouse_entered"]
[connection signal="pressed" from="Yes" to="." method="_on_Yes_pressed"]
[connection signal="focus_entered" from="No" to="." method="_on_No_focus_entered"]
[connection signal="mouse_entered" from="No" to="." method="_on_No_mouse_entered"]
[connection signal="pressed" from="No" to="." method="_on_No_pressed"]
